Updated actions to mvn clean verify

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -16,4 +16,4 @@ jobs:
            distribution: 'temurin'
            cache: maven
        - name: Clean, compile and test the code
-         run: mvn --batch-mode --update-snapshots clean compile test
+         run: mvn --batch-mode --update-snapshots clean verify
